--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>places</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <!-- tab value must match a route -->
+    <ion-tab-button tab="discover"> 
+      <ion-label>Discover</ion-label>
+      <ion-icon name="search"></ion-icon>
+    </ion-tab-button>
+    <!-- tab value must match a route -->
+    <ion-tab-button tab="offers">
+      <ion-label>Offers</ion-label>
+      <ion-icon name="card"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
