fix routing, copy one in tutorial

--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -20,7 +20,7 @@
           <div class="ion-text-right ion-padding">
             <ion-button fill="clear"
                         color="primary"
-                        [routerLink]="['/', 'places','discover', loadedPlaces[0].id]">
+                        [routerLink]="['/', 'places', 'tabs','discover', loadedPlaces[0].id]">
               More
             </ion-button>
           </div>
