--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,9 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>My Offers</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ offers[0].title }}</ion-card-title>
+            <ion-card-subtitle>{{ offers[0].price | currency }}</ion-card-subtitle>            
+          </ion-card-header>
+          <ion-img [src]="offers[0].imageUrl"></ion-img>
+          <ion-card-content>
+            <p>{{ offers[0].description }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <ion-list>
+          <ion-item *ngFor="let offer of offers.slice(1)"
+                    [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
+                    detail>
+            <ion-thumbnail slot="start">
+              <ion-img [src]="offer.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{ offer.title }}</h2>
+              <p>{{ offer.description }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
