--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -1,9 +1,23 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offer-bookings</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Bookings</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8">
+        <ion-list>
+          <ion-item>this is an item 1</ion-item>
+          <ion-item>this is an item 2</ion-item>
+          <ion-item>this is an item 3</ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
