--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-card>
           <ion-card-header>
             <ion-card-title>{{ offers[0].title }}</ion-card-title>
@@ -17,6 +17,13 @@
           <ion-card-content>
             <p>{{ offers[0].description }}</p>
           </ion-card-content>
+          <div class="ion-text-right ion-padding">
+            <ion-button fill="clear"
+                        color="primary"
+                        [routerLink]="['/', 'places', 'tabs', 'offers', offers[0].id]">
+              More
+            </ion-button>
+          </div>
         </ion-card>
       </ion-col>
     </ion-row>
