--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -3,21 +3,13 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
-    <ion-title>Bookings</ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-sm="8">
-        <ion-list>
-          <ion-item>this is an item 1</ion-item>
-          <ion-item>this is an item 2</ion-item>
-          <ion-item>this is an item 3</ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+<ion-content class="ion-padding">
+  <ion-button class="ion-margin" color="primary"
+              [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]">
+  Edit
+  </ion-button>
 </ion-content>
