--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,18 +9,24 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item lines="none">
-          <ion-icon name="business" slot="start"></ion-icon>
-          <ion-label>Discover Places</ion-label>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-          <ion-label>Your Bookings</ion-label>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-icon name="exit" slot="start"></ion-icon>
-          <ion-label>Log out</ion-label>
-        </ion-item>
+        <ion-menu-toggle>
+          <ion-item lines="none" routerLink="/places/tabs/discover" class="ion-button">
+            <ion-icon name="business" slot="start"></ion-icon>
+            <ion-label>Discover Places</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" routerLink="/bookings" class="ion-button">
+            <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+            <ion-label>Your Bookings</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" (click)="onLogOut()" class="ion-button">
+            <ion-icon name="exit" slot="start"></ion-icon>
+            <ion-label>Log out</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
