--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Authenticate</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-button color="primary" (click)="onLogIn()">Login</ion-button>
 </ion-content>
