--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -8,5 +8,10 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col size="10">Row 1 Col 1</ion-col>
+      <ion-col size="1">Row 1 Col 2</ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
