--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -16,39 +16,24 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>{{ offers[0].title }}</ion-card-title>
-            <ion-card-subtitle>{{ offers[0].price | currency }}</ion-card-subtitle>            
-          </ion-card-header>
-          <ion-img [src]="offers[0].imageUrl"></ion-img>
-          <ion-card-content>
-            <p>{{ offers[0].description }}</p>
-          </ion-card-content>
-          <div class="ion-text-right ion-padding">
-            <ion-button fill="clear"
-                        color="primary"
-                        [routerLink]="['/', 'places', 'tabs', 'offers', offers[0].id]">
-              More
-            </ion-button>
-          </div>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
-          <ion-item *ngFor="let offer of offers.slice(1)"
-                    [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
-                    detail>
-            <ion-thumbnail slot="start">
-              <ion-img [src]="offer.imageUrl"></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{ offer.title }}</h2>
-              <p>{{ offer.description }}</p>
-            </ion-label>
-          </ion-item>
+          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
+            <ion-item [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
+                      detail>
+              <ion-thumbnail slot="start">
+                <ion-img [src]="offer.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ offer.title }}</h2>
+                <p>{{ offer.description }}</p>
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
+                <ion-icon name="create" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>          
+          </ion-item-sliding>
         </ion-list>
       </ion-col>
     </ion-row>
