--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -28,7 +28,7 @@
                 <p>{{ offer.description }}</p>
               </ion-label>
             </ion-item>
-            <ion-item-options>
+            <ion-item-options side="end">
               <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
                 <ion-icon name="create" slot="icon-only"></ion-icon>
               </ion-item-option>
