--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,5 +5,6 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
   <ion-button color="primary" (click)="onLogIn()">Login</ion-button>
 </ion-content>
