--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,8 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  // --ion-color-primary: #3880ff;
+  --ion-color-primary: #c930dd;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -83,7 +84,9 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
+    // --ion-color-primary: #428cff;
+    --ion-color-primary: #f08e0f;
+
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -145,6 +148,8 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    --ion-toolbar-background: var(--ion-color-primary, black);
   }
 
   /*
@@ -228,5 +233,7 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
+
+    --ion-toolbar-background: var(--ion-color-primary, black);
   }
 }
