--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,6 +5,53 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
-  <ion-button color="primary" (click)="onLogIn()">Login</ion-button>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">Email</ion-label>
+              <ion-input type="email"
+                          ngModel
+                          name="email"
+                          required
+                          #emailCtrl="ngModel">
+              </ion-input>
+            </ion-item>
+            <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched"
+                      lines="none">
+              <ion-label>Invalid email address.</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" 
+                          ngModel 
+                          name="password" 
+                          required 
+                          min-length="6"
+                          #passwordCtrl="ngModel">
+              </ion-input>
+            </ion-item>
+            <ion-item *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
+                      lines="none">
+              <ion-label>Should at least be 6 characters long.</ion-label>
+            </ion-item>
+          </ion-list>        
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
+          <ion-button type="submit"
+                      color="primary"
+                      (click)="onLogIn()"
+                      expand="block"
+                      [disabled]="!f.valid">Login</ion-button>
+          <!-- <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner> -->
+        </ion-col>
+      </ion-row>
+    </ion-grid>      
+  </form>
+
 </ion-content>
