--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -29,7 +29,7 @@
                           ngModel 
                           name="password" 
                           required 
-                          min-length="6"
+                          minlength="6"
                           #passwordCtrl="ngModel">
               </ion-input>
             </ion-item>
@@ -42,7 +42,11 @@
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button type="button" color="primary" fill="clear" expand="block">Switch to Login</ion-button>
+          <ion-button type="button"
+                      color="primary"
+                      fill="clear"
+                      expand="block"
+                      (click)="onSwitchAuthModel()">Switch to {{ isLogin ? 'Signup' : 'Log In'}}</ion-button>
           <ion-button type="submit"
                       color="primary"
                       (click)="onLogIn()"
