--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3">
+      <ion-col size-md="6" offset-md="3" *ngIf="!!loadedBookings && loadedBookings.length">
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBooking>
             <ion-item>
@@ -26,6 +26,9 @@
             </ion-item-options>
           </ion-item-sliding>
         </ion-list>
+      </ion-col>
+      <ion-col size-md="6" offset-md="3" *ngIf="!loadedBookings || !loadedBookings.length">
+        <p class="ion-text-center">No bookings found!</p>
       </ion-col>
     </ion-row>
   </ion-grid>
