--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -16,7 +16,14 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-list>
+        <div *ngIf="isLoading">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+        <div *ngIf="!isLoading && !offers.length" >
+          <p class="ion-text-center">No offers found! Please create one first!</p>
+          <ion-button color="primary" routerLink="/places/tabs/offers/new">Offer New Places</ion-button>
+        </div>
+        <ion-list *ngIf="!isLoading && offers.length > 0">
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
             <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options side="end">
